--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "bcrypt": "^5.1.1",
+    "class-validator": "^0.14.1",
     "cloudinary": "^2.5.1",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
