reverted the tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,6 @@
     "baseUrl": "./",
     "incremental": true,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
-    "types": ["node", "express", "multer"]
+    "skipLibCheck": true
   }
 }
