--- a/package.json
+++ b/package.json
@@ -14,11 +14,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/jest/bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "deploy": "wrangler publish",
-    "dev:worker": "wrangler dev"
+    "test:cov": "jest --coverage"
   },
   "engines": {
     "npm": ">=10.0.0",
